Fixed content wrap in desktop

--- a/home/static/home/style.css
+++ b/home/static/home/style.css
@@ -15,3 +15,8 @@ h1 {
 #dismiss_msg {
     position: absolute;
 }
+
+@media(max-width: 768px) {
+
+}
+}
